Make GroovyMain, GroovyShell, and GroovySocketServer more consistent in GroovyCodeSource usage, esp. wrt URL.